<resources>
    <string name="app_name">Completist</string>
    <string name="search">Search</string>
    <string name="watched_movies">Watched Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="now_showing">Now Showing</string>
    <string name="popular_actors_directors">Popular Actors/Directors</string>
    <string name="my_lists">My Lists</string>
    <string name="back">Back</string>
    <string name="genres">Genres</string>
    <string name="to_watch">To Watch</string>
    <string name="tmdb">TMDB</string>
    <string name="imdb">IMDB</string>
    <string name="tmdb_acknowledgment">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="lists">Lists</string>
    <string name="list">List</string>
    <string name="movie">Movie</string>
    <string name="welcome_summary"><![CDATA[A checklist to keep track of movies watched by your favorite actors & directors]]></string>
    <string-array name="list_options_array">
        <item>All Movies</item>
        <item>Acting</item>
        <item>Writing/Directing</item>
        <item>TV</item>
    </string-array>
    <item name="id" type="id" />
    <item name="tvOrMovie" type="id" />
    <string name="rank">Rankings</string>
    <string name="popular">Popular</string>
    <string name="rankings">Rankings</string>
    <string name="tv">TV</string>
    <string name="saved">Saved</string>
    <string name="cast_poster">cast poster</string>
    <string name="film_poster">film poster</string>
    <string name="set_watched_button">set-watched button</string>
    <string name="set_queued_button">set-queued button</string>
    <string name="unranked">Unranked</string>
</resources>
