<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/largeMargin"
    tools:context=".view.MyListsFragment">

    <TextView
        android:id="@+id/my_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titleTextSize"
        android:text="@string/my_lists" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/saved_lists_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/pop_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titleTextSize"
        android:layout_marginTop="@dimen/largeMargin"
        android:text="@string/popular_actors_directors" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/pop_lists_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/watched_movies_btn"
            style="@style/ListButtonStyle"
            android:text="@string/watched_movies" />

        <Button
            android:id="@+id/popular_movies_btn"
            style="@style/ListButtonStyle"
            android:text="@string/popular_movies"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/top_movies_btn"
            style="@style/ListButtonStyle"
            android:text="@string/top_rated_movies"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/nowshowing_movies_btn"
            style="@style/ListButtonStyle"
            android:text="@string/now_showing"
            />
    </LinearLayout>


</LinearLayout>